--- a/css_demo11.html
+++ b/css_demo11.html
@@ -1,9 +1,32 @@
+<!--
+ * @Description: In User Settings Edit
+ * @Author: your name
+ * @Date: 2019-10-13 21:38:27
+ * @LastEditTime: 2019-10-13 22:20:00
+ * @LastEditors: Please set LastEditors
+ -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <style>
+        @font-face {
+            font-family: 'icomoon'; 
+            src:  url('fonts/icomoon.eot?mcsslk');
+            src:  url('fonts/icomoon.eot?mcsslk#iefix') format('embedded-opentype'),
+  	        url('fonts/icomoon.ttf?mcsslk') format('truetype'),
+            url('fonts/icomoon.woff?mcsslk') format('woff'),
+            url('fonts/icomoon.svg?mcsslk#icomoon') format('svg');
+            font-weight: normal;
+            font-style: normal;
+        }
+        span {
+            font-family: "icomoon";
+            font-size: 100px;
+        }
+    </style>
     <title>Document</title>
 </head>
 <body>
@@ -14,5 +37,6 @@
         阿里 icon font 推荐网站 http://www.iconfont.cn
         fontello字体 http://fontello.com
      -->
+     <span></span>
 </body>
 </html>
