--- a/jd_index.html
+++ b/jd_index.html
@@ -13,9 +13,24 @@
     <div class="top">
         <a href="https://ccc-x.jd.com/dsp/cpd?ext=aHR0cHM6Ly9wcm8uamQuY29tL21hbGwvYWN0aXZlLzJvQUdqaEhEbmdVajRuWjFtdlduY05FQlAydkUvaW5kZXguaHRtbA&log=JF5rMUAKXlLMuE_-1qw2RKwu9W82n03RnztIpYfC-NVWZuaHLhAWyfY2fGI8hkypjX6T3WM-dpm1SMo-u0FkGehy5FwRczVyt5WViwu0jHfyb6oUs5rquRAlZ9ovgRgbaNPNZOJQzvRTmO5Fkxdy9cdhHZmaJlVw6YKs9y470uANvnr02jq7V1i9r2Y9Szz8CTr9T2I-Dx4c0eJGMDbOsp_GhQ9NqojSN9vX2GSOjsLH_qnJRJuvjmmUy9e-WrP7ISBMmYe8l6NW6m7c7ZlhmeTrNUepapC9cYyyJgM8QxRndcmkBir2ZqeSNiPq5Ijd_N_RpS_s2OGRSs6muuMxsL_pZl6Iib6qHGvgHdEoNqCcfhYSp15FiYtNI9v8tIDTQ2Ma9VYmL--EILl7AFa-xcC9NX8A4dTIOveJCxGf2OcRgUIBV062O2lSwdxc6kSs4tke5yiUdOUrKFOKLiKf19SOQPSXoUA9TuIpoOKTLtpQckAmgWlQXrIgop6EhLonRna7Cq5PPrdia9Dhy3zIKM2Z_Zch5-3EENDUhpvV-dQyEB4lWsZsHmz4_92BXbVLZouc3_Jf7z81HR_ZqIIusTMyUjKIfrAxgtwqBX6cV2sY1TZkxcV1aVBe4LkYg62cKBHHYVP-8vM9r2yI8o8CbWu4CAMrB8hsJSHiDZvmDathN_zMa_kzp9NdtCadBEoEBLw0A4DeaWmqVm4c19xA67uOZ5Ha1DPYwgqu3Fw3sN8U4cWX-PQKlgdKgRngdam8" target="_blank"></a>
         <div class="top-container">
-
+            <i class="top-close"></i>
         </div>
     </div>
 <!-- 顶部通栏结束 -->
+
+<!-- 快捷导航栏开始 -->
+    <div class="shortcut">
+        <div class="w">123
+            <ul class="fl">
+                <li>北京</li>
+            </ul>
+            <ul class="fr">
+                <li><a href="#">我的订单</a></li>
+                <li><a href="#">我的京东</a></li>
+                <li><a href="#">京东会员</a></li>
+            </ul>
+        </div>
+    </div>
+<!-- 快捷导航栏结束 -->
 </body>
 </html>
