--- a/jd_index.html
+++ b/jd_index.html
@@ -20,14 +20,18 @@
 
 <!-- 快捷导航栏开始 -->
     <div class="shortcut">
-        <div class="w">123
+        <div class="w">
             <ul class="fl">
                 <li>北京</li>
             </ul>
             <ul class="fr">
-                <li><a href="#">我的订单</a></li>
-                <li><a href="#">我的京东</a></li>
-                <li><a href="#">京东会员</a></li>
+                <li><a href="#">我的订单</a></li><li class="spacer">|</li>
+                <li><a href="#">我的京东</a></li><li class="spacer">|</li>
+                <li><a href="#">京东会员</a></li><li class="spacer">|</li>
+                <li><a href="#">企业采购</a></li><li class="spacer">|</li>
+                <li><a href="#">客户服务</a></li><li class="spacer">|</li>
+                <li><a href="#">网站导航</a></li><li class="spacer">|</li>
+                <li><a href="#">手机京东</a></li>
             </ul>
         </div>
     </div>
