--- a/jd_index.html
+++ b/jd_index.html
@@ -25,6 +25,11 @@
                 <li>北京</li>
             </ul>
             <ul class="fr">
+                <li>
+                    <a href="#">您好请登录</a>
+                    <a href="#" class="shortcut-register">免费注册</a>
+                </li>
+                <li class="spacer">|</li>
                 <li><a href="#">我的订单</a></li><li class="spacer">|</li>
                 <li><a href="#">我的京东</a></li><li class="spacer">|</li>
                 <li><a href="#">京东会员</a></li><li class="spacer">|</li>
