--- a/jd_index.html
+++ b/jd_index.html
@@ -7,20 +7,6 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/js_index.css">
     <title>Document</title>
-<!-- 
-    <style>
-        @font-face {
-        font-family: 'icomoon';
-        src:  url('fonts/icomoon.eot?79nha6');
-        src:  url('fonts/icomoon.eot?79nha6#iefix') format('embedded-opentype'),
-        url('fonts/icomoon.ttf?79nha6') format('truetype'),
-        url('fonts/icomoon.woff?79nha6') format('woff'),
-        url('fonts/icomoon.svg?79nha6#icomoon') format('svg');
-        font-weight: normal;
-        font-style: normal;
-        font-display: block;
-        }
-    </style> -->
 </head>
 <body>
 <!-- 顶部通栏开始 -->
@@ -74,5 +60,16 @@
         </div>
     </div>
 <!-- 快捷导航栏结束 -->
+<!-- header start -->
+    <div class="header">
+        <div class="w">
+            <a class="logo" href="https://hellojoy.jd.com/?babelChannel=1518455&activityId=7980&source=01">
+                <div class="logo_scene_img">
+                    
+                </div>
+            </a>
+        </div>
+    </div>
+<!-- header end -->
 </body>
 </html>
