--- a/jd_index.html
+++ b/jd_index.html
@@ -63,11 +63,25 @@
 <!-- header start -->
     <div class="header">
         <div class="w">
-            <a class="logo" href="https://hellojoy.jd.com/?babelChannel=1518455&activityId=7980&source=01">
-                <div class="logo_scene_img">
-                    
+            <!-- logo 部分 普遍做法 div + h1-->
+            <div class="logo">
+                <h1>
+                    <a class="logo_scene logo_scene_hide" href="https://hellojoy.jd.com/?babelChannel=1518455&activityId=7980&source=01">
+                        <div class="logo_scene_img"></div>
+                    </a>
+                </h1>
+            </div>
+            <div class="search-m">
+                <div class="form" role="searchbox"></div>
+                <div id="settleup" class="dropdown">
+                    <div class="cw-icon">
+                        
+                    </div>
                 </div>
-            </a>
+            </div>
+            <div class="treasure">
+                <a class="promo_lk" href="https://pro.jd.com/mall/active/3PsCKhiZ1HFKXuTtNsWdu1qmgbJ5/index.html" target="_blank"></a>
+            </div>
         </div>
     </div>
 <!-- header end -->
