--- a/jd_index.html
+++ b/jd_index.html
@@ -72,10 +72,17 @@
                 </h1>
             </div>
             <div class="search-m">
-                <div class="form" role="searchbox"></div>
+                <div class="form" role="searchbox">
+                    <input type="text" value="单反相机">
+                    <span></span>
+                    <button class="searchBtn">
+                        <i></i>
+                    </button>
+                </div>
+
                 <div id="settleup" class="dropdown">
                     <div class="cw-icon">
-                        
+
                     </div>
                 </div>
             </div>
