--- a/jd_index.html
+++ b/jd_index.html
@@ -71,6 +71,7 @@
                     </a>
                 </h1>
             </div>
+            <!-- 搜索部分 -->
             <div class="search-m">
                 <div class="form" role="searchbox">
                     <input type="text" value="单反相机">
@@ -86,6 +87,31 @@
                     </div>
                 </div>
             </div>
+            <!-- 热词 -->
+            <div class="hotwords">
+                <a href="#">工业品超品</a>
+                <a href="#">二手浪琴</a>
+                <a href="#">冬换季</a>
+                <a href="#">童装童鞋</a>
+                <a href="#">手机配件</a>
+                <a href="#">家具换季</a>
+                <a href="#">晶骑行动</a>
+                <a href="#">精选种子</a>
+                <a href="#">个护好物</a>
+            </div>
+            <div class="navitems">
+                <a href="#">秒杀</a>
+                <a href="#">优惠券</a>
+                <a href="#">PLUS会员</a>
+                <a href="#">品牌闪购</a>
+                <a href="#">拍卖</a>
+                <a href="#">京东时尚</a>
+                <a href="#">京东超市</a>
+                <a href="#">京东生鲜</a>
+                <a href="#">海囤全球</a>
+                <a href="#">京东金融</a>
+            </div>
+            <!-- 广告位 -->
             <div class="treasure">
                 <a class="promo_lk" href="https://pro.jd.com/mall/active/3PsCKhiZ1HFKXuTtNsWdu1qmgbJ5/index.html" target="_blank"></a>
             </div>
