--- a/jd_index.html
+++ b/jd_index.html
@@ -83,7 +83,8 @@
 
                 <div id="settleup" class="dropdown">
                     <div class="cw-icon">
-
+                        <span></span>
+                        <em>我的购物车</em>
                     </div>
                 </div>
             </div>
