--- a/jd_index.html
+++ b/jd_index.html
@@ -101,16 +101,22 @@
                 <a href="#">个护好物</a>
             </div>
             <div class="navitems">
-                <a href="#">秒杀</a>
-                <a href="#">优惠券</a>
-                <a href="#">PLUS会员</a>
-                <a href="#">品牌闪购</a>
-                <a href="#">拍卖</a>
-                <a href="#">京东时尚</a>
-                <a href="#">京东超市</a>
-                <a href="#">京东生鲜</a>
-                <a href="#">海囤全球</a>
-                <a href="#">京东金融</a>
+                <ul class="nav-left-item">
+                    <li><a href="#">秒杀</a></li>
+                    <li><a href="#">优惠券</a></li>
+                    <li><a href="#">PLUS会员</a></li>
+                    <li><a href="#">品牌闪购</a></li>
+                </ul>
+                <ul class="nav-middle-item">
+                    <li><a href="#">拍卖</a></li>
+                    <li><a href="#">京东时尚</a></li>
+                    <li><a href="#">京东超市</a></li>
+                    <li><a href="#">京东生鲜</a></li>
+                </ul>
+                <ul class="nav-right-item">
+                    <li><a href="#">海囤全球</a></li>
+                    <li><a href="#">京东金融</a></li>
+                </ul>
             </div>
             <!-- 广告位 -->
             <div class="treasure">
