--- a/jd_index.html
+++ b/jd_index.html
@@ -71,6 +71,7 @@
                     </a>
                 </h1>
             </div>
+            
             <!-- 搜索部分 -->
             <div class="search-m">
                 <div class="form" role="searchbox">
@@ -88,6 +89,7 @@
                     </div>
                 </div>
             </div>
+
             <!-- 热词 -->
             <div class="hotwords">
                 <a href="#">工业品超品</a>
@@ -100,6 +102,8 @@
                 <a href="#">精选种子</a>
                 <a href="#">个护好物</a>
             </div>
+
+            <!-- 导航条 -->
             <div class="navitems">
                 <ul class="nav-left-item">
                     <li><a href="#">秒杀</a></li>
@@ -118,6 +122,7 @@
                     <li><a href="#">京东金融</a></li>
                 </ul>
             </div>
+
             <!-- 广告位 -->
             <div class="treasure">
                 <a class="promo_lk" href="https://pro.jd.com/mall/active/3PsCKhiZ1HFKXuTtNsWdu1qmgbJ5/index.html" target="_blank"></a>
