--- a/jd_index.html
+++ b/jd_index.html
@@ -71,7 +71,7 @@
                     </a>
                 </h1>
             </div>
-            
+
             <!-- 搜索部分 -->
             <div class="search-m">
                 <div class="form" role="searchbox">
@@ -130,5 +130,71 @@
         </div>
     </div>
 <!-- header end -->
+
+<!-- footer start -->
+    <div class="footer">
+        <!-- service -->
+        <div class="mod_service">
+            <div class="mod_service_inner">
+                <ul class="mod_service_list">
+                    <li class="mod_service_item">
+                        <div class="mod_service_unit">
+                            <h5 class="mod_service_tit mod_service_duo"></h5>
+                            <p class="mod_service_txt">品类齐全，轻松购物</p>
+                        </div>
+                    </li>
+                    <li class="mod_service_item">
+                        <div class="mod_service_unit">
+                            <h5 class="mod_service_tit mod_service_kuai"></h5>
+                            <p class="mod_service_txt">多仓直发，极速配送</p>
+                        </div>
+                    </li>
+                    <li class="mod_service_item">
+                        <div class="mod_service_unit">
+                            <h5 class="mod_service_tit mod_service_hao"></h5>
+                            <p class="mod_service_txt">正品行货，精致服务</p>
+                        </div>
+                    </li>
+                    <li class="mod_service_item">
+                        <div class="mod_service_unit">
+                            <h5 class="mod_service_tit mod_service_sheng"></h5>
+                            <p class="mod_service_txt">天天低价，畅选无忧</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!-- help -->
+        <div class="mod_help">
+            <div class="mod_help_inner">
+                <div class="mod_help_list">
+                    <div class="mod_help_nav">
+                        <h5 class="mod_help_nav_tit">购物指南</h5>
+                        <ul class="mod_help_nav_con">
+                            <li><a href="https://help.jd.com/user/issue/list-29.html" target="_blank">购物流程</a></li>
+                            <li><a href="https://help.jd.com/user/issue/list-151.html" target="_blank">会员介绍</a></li>
+                            <li><a href="https://help.jd.com/user/issue/list-297.html" target="_blank">生活旅行</a></li>
+                            <li><a href="https://help.jd.com/user/issue.html" target="_blank">常见问题</a></li>
+                            <li><a href="https://help.jd.com/user/issue/list-136.html" target="_blank">大家电</a></li>
+                            <li><a href="https://help.jd.com/user/custom.html" target="_blank">联系客服</a></li>
+                        </ul>
+                    </div>
+                    <div class="mod_help_nav">
+                        <h5 class="mod_help_nav_tit">配送方式</h5>
+                    </div>
+                    <div class="mod_help_nav">
+                        <h5 class="mod_help_nav_tit">支付方式</h5>
+                    </div>
+                    <div class="mod_help_nav">
+                        <h5 class="mod_help_nav_tit">售后服务</h5>
+                    </div>
+                    <div class="mod_help_nav">
+                        <h5 class="mod_help_nav_tit">特色服务</h5>
+                    </div>
+                </div>  
+            </div>
+        </div>
+    </div>
+<!-- footer end -->
 </body>
 </html>
