--- a/jd_index.html
+++ b/jd_index.html
@@ -181,15 +181,53 @@
                     </div>
                     <div class="mod_help_nav">
                         <h5 class="mod_help_nav_tit">配送方式</h5>
+                        <ul>
+                            <li><a href="https://help.jd.com/user/issue/list-81-100.html" target="_blank">上门自提</a></li>
+                            <li><a href="https://help.jd.com/user/issue/list-81.html" target="_blank">211限时达</a></li>
+                            <li><a href="https://help.jd.com/user/issue/103-983.html" target="_blank">配送服务查询</a></li>
+                            <li><a href="https://help.jd.com/user/issue/109-188.html" target="_blank">配送费收取标准</a></li>
+                            <li><a href="https://help.joybuy.com/help/question-list-201.html" target="_blank">海外配送</a></li>
+                        </ul>
                     </div>
                     <div class="mod_help_nav">
                         <h5 class="mod_help_nav_tit">支付方式</h5>
+                        <ul>
+                            <li><a href="https://help.jd.com/user/issue/list-172.html" target="_blank">货到付款</a></li>
+                            <li><a href="https://help.jd.com/user/issue/list-173.html" target="_blank">在线支付</a></li>
+                            <li><a href="https://help.jd.com/user/issue/list-176.html" target="_blank">分期付款</a></li>
+                            <li><a href="https://help.jd.com/user/issue/list-174.html" target="_blank">邮局汇款</a></li>
+                            <li><a href="https://help.jd.com/user/issue/list-175.html" target="_blank">公司转账</a></li>
+                        </ul>
                     </div>
                     <div class="mod_help_nav">
                         <h5 class="mod_help_nav_tit">售后服务</h5>
+                        <ul>
+                            <li><a href="https://help.jd.com/user/issue/321-981.html" target="_blank">售后政策</a></li>
+                            <li><a href="https://help.jd.com/user/issue/list-132.html" target="_blank">价格保护</a></li>
+                            <li><a href="https://help.jd.com/user/issue/130-978.html" target="_blank">退款说明</a></li>
+                            <li><a href="https://myjd.jd.com/repair/repairs.action" target="_blank">返修/退换货</a></li>
+                            <li><a href="https://help.jd.com/user/issue/list-50.html" target="_blank">取消订单</a></li>
+                        </ul>
                     </div>
                     <div class="mod_help_nav">
                         <h5 class="mod_help_nav_tit">特色服务</h5>
+                        <ul>
+                            <li><a href="https://1paipai.jd.com/" target="_blank">夺命岛</a></li>
+                            <li><a href="https://help.jd.com/user/issue/list-134.html" target="_blank">DIY装机</a></li>
+                            <li><a href="https://fuwu.jd.com/" target="_blank">延保服务</a></li>
+                            <li><a href="https://o.jd.com/market/index.action" target="_blank">京东E卡</a></li>
+                            <li><a href="https://mobile.jd.com/" target="_blank">京东通信</a></li>
+                            <li><a href="https://smart.jd.com/" target="_blank">京东座智能</a></li>
+                        </ul>
+                    </div>
+                    <div class="mod_help_cover">
+                        <h5 class="mod_help_cover_tit">京东自营覆盖区县</h5>
+                        <div class="mod_help_cover_con">
+                            <p class="mod_help_cover_info">京东已向全国2661个区县提供自营配送服务，支持货到付款、POS机刷卡和售后上门服务。</p>
+                            <p class="mod_help_cover_more">
+                                <a href="https://help.jd.com/user/issue/103-983.html" target="_blank">查看详情</a>
+                            </p>
+                        </div>
                     </div>
                 </div>  
             </div>
