--- a/jd_index.html
+++ b/jd_index.html
@@ -60,6 +60,7 @@
         </div>
     </div>
 <!-- 快捷导航栏结束 -->
+
 <!-- header start -->
     <div class="header">
         <div class="w">
@@ -130,6 +131,12 @@
         </div>
     </div>
 <!-- header end -->
+
+<!-- 内容视图1开始 -->
+    <div class="mod_container">
+
+    </div>
+<!-- 内容视图1结束 -->
 
 <!-- footer start -->
     <div class="footer">
