--- a/jd_index.html
+++ b/jd_index.html
@@ -133,8 +133,8 @@
 <!-- header end -->
 
 <!-- 内容视图1开始 -->
-    <div class="mod_container">
-
+    <div class="mod_container w">
+        
     </div>
 <!-- 内容视图1结束 -->
 
@@ -171,6 +171,7 @@
                 </ul>
             </div>
         </div>
+
         <!-- help -->
         <div class="mod_help">
             <div class="mod_help_inner">
@@ -237,6 +238,29 @@
                         </div>
                     </div>
                 </div>  
+            </div>
+        </div>
+
+        <!-- copyright -->
+        <div class="mod_copyright">
+            <div class="mod_copyright_inner w">
+                <p class="mod_copyright_links">
+                    <a href="https://about.jd.com" target="_blank">关于我们</a><span>|</span>
+                    <a href="https://about.jd.com/contact" target="_blank">联系我们</a><span>|</span>
+                    <a href="https://help.jd.com/user/custom.html" target="_blank">联系客服</a><span>|</span>
+                    <a href="https://lai.jd.com" target="_blank">合作协商</a><span>|</span>
+                    <a href="https://helpcenter.jd.com/venderportal/index.html" target="_blank">商家帮助</a><span>|</span>
+                    <a href="https://jzt.jd.com" target="_blank">营销中心</a><span>|</span>
+                    <a href="https://app.jd.com/" target="_blank">手机京东</a><span>|</span>
+                    <a href="https://club.jd.com/links.aspx" target="_blank">友情链接</a><span>|</span>
+                    <a href="https://media.jd.com/" target="_blank">销售联盟</a><span>|</span>
+                    <a href="https://pro.jd.com/mall/active/3WA2zN8wkwc9fL9TxAJXHh5Nj79u/index.html" target="_blank">京东社区</a><span>|</span>
+                    <a href="https://pro.jd.com/mall/active/3TF25tMdrnURET8Ez1cW9hzfg3Jt/index.html" target="_blank">风险监测</a><span>|</span>
+                    <a href="https://about.jd.com/privacy/" target="_blank">隐私政策</a><span>|</span>
+                    <a href="https://gongyi.jd.com" target="_blank">京东公益</a><span>|</span>
+                    <a href="https://en.jd.com/" target="_blank">English Site</a><span>|</span>
+                    <a href="https://corporate.jd.com" target="_blank">Media & IR</a>
+                </p>
             </div>
         </div>
     </div>
