--- a/jd_index.html
+++ b/jd_index.html
@@ -132,11 +132,14 @@
     </div>
 <!-- header end -->
 
-<!-- 内容视图1开始 -->
-    <div class="mod_container w">
-        
+<!-- 内容视图广告开始 -->
+    <div class="fs">
+        <a href="https://h5.m.jd.com/pc/dev/391BqWHzwykzEcW9DR3zTek4PC8h/index.html" target="_blank"></a>
+        <div class="mod-content w">
+            
+        </div>        
     </div>
-<!-- 内容视图1结束 -->
+<!-- 内容视图广告结束 -->
 
 <!-- footer start -->
     <div class="footer">
