--- a/css_demo12.html
+++ b/css_demo12.html
@@ -15,12 +15,26 @@
                 <a href="#" title="学成在线平台">学成在线</a>
             </h1>
         </div>
-        <!-- <ul class="right-nav">
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-            <li>4</li>
-        </ul> -->
+        <!-- nav部分 -->
+        <nav>
+            <ul>
+                <li><a href="#">首页</a></li>
+                <li><a href="#">课程</a></li>
+                <li><a href="#">职业规划</a></li>
+            </ul>
+        </nav>
+        <!-- 搜索部分 -->
+        <div class="search">
+            <input type="search" placeholder="清输入搜索内容"><button></button>
+        </div>
+        <!-- 个人中心 -->
+        <div class="personal">
+            <dl>
+                <dt>个人中心</dt>
+                <dd></dd>
+                <dd></dd>    
+            </dl>
+        </div>
     </header>
 </body>
 </html>
