--- a/css_demo12.html
+++ b/css_demo12.html
@@ -36,5 +36,25 @@
             </dl>
         </div>
     </header>
+
+    <div class="banner">
+        <div class="w inner">
+            <div class="subnav">
+                <ul>
+                    <li><a href="#">前端开发 <span> > </span> </a></li>
+                </ul>
+            </div>
+
+            <div class="circle">
+                <i></i>
+                <i></i>
+                <i></i>
+                <i></i>
+                <i></i>
+                <i></i>
+                <i></i>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
