--- a/css_demo12.html
+++ b/css_demo12.html
@@ -54,6 +54,10 @@
                 <i></i>
                 <i></i>
             </div>
+
+            <div class="rightnav">
+                
+            </div>
         </div>
     </div>
 </body>
