--- a/css_demo12.html
+++ b/css_demo12.html
@@ -56,9 +56,37 @@
             </div>
 
             <div class="rightnav">
-                
+
             </div>
         </div>
     </div>
+
+    <div class="w recommend">
+        <div class="rec-1">
+            <strong>精品推荐</strong> |
+            <a href="#">jQuary</a> |
+            <a href="#">jQuary</a> |
+            <a href="#">jQuary</a> |
+            <a href="#">jQuary</a> |
+            <a href="#">jQuary</a> |
+            <a href="#">jQuary</a> |
+            <a href="#">jQuary</a> | 
+            <a href="#">jQuary</a>
+            <em>修改兴趣</em>
+        </div>
+    </div>
+
+    <div class="recommend-body w">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </div>    
 </body>
 </html>
