--- a/css_demo12.html
+++ b/css_demo12.html
@@ -76,7 +76,7 @@
         </div>
     </div>
 
-    <div class="recommend-body w">
+    <div class="recommend-body w clearfix">
         <li></li>
         <li></li>
         <li></li>
@@ -87,6 +87,39 @@
         <li></li>
         <li></li>
         <li></li>
-    </div>    
+    </div> 
+    <div class="footer">
+        <div class="foot-inner w">
+            <div class="foot-left">
+                <button>下载APP</button>
+            </div>
+            <div class="foot-right">
+                <dl>
+                    <dt>关于学成网</dt>
+                    <dd>关于</dd>
+                    <dd>关于1</dd>
+                    <dd>关于2</dd>
+                    <dd>关于3</dd>
+                    <dd>关于4</dd>
+                </dl>
+                <dl>
+                    <dt>关于学成网</dt>
+                    <dd>关于</dd>
+                    <dd>关于1</dd>
+                    <dd>关于2</dd>
+                    <dd>关于3</dd>
+                    <dd>关于4</dd>
+                </dl>
+                <dl>
+                    <dt>关于学成网</dt>
+                    <dd>关于</dd>
+                    <dd>关于1</dd>
+                    <dd>关于2</dd>
+                    <dd>关于3</dd>
+                    <dd>关于4</dd>
+                </dl>
+            </div>
+        </div>
+    </div>   
 </body>
 </html>
