--- a/html5_test1.html
+++ b/html5_test1.html
@@ -24,6 +24,9 @@
     <iframe height=498 width=1000 src='http://player.youku.com/embed/XNDI1ODU3MDkxNg==' frameborder=0 'allowfullscreen'></iframe>
     <!-- css 新标签 header, nav, footer, article, section, main -->
     <!-- 伪元素 ::before ::after content 一个是向前的盒子，一个是向后的盒子 -->
-
+    <script>
+        var number = 10;
+        console.log(number);
+    </script>
 </body>
 </html>
