--- a/array的相关操作.html
+++ b/array的相关操作.html
@@ -17,7 +17,14 @@
         var test2 = arr.indexOf('30');
         console.log(test0, test1, test2);
 
-        // slice 截取数组操作
+        // push and pop 是数组的添加和删除操作
+        arr.push('a', 'b', 'c');
+        console.log(arr);
+        arr.pop();
+        arr.pop();
+        console.log(arr);
+
+        // slice 截取数组操作, 一个参数是起始位置，
         var arr1 = ['A', 'B', 'C', 'D', 'E', 'F', 'G'];
         var newArr = arr1.slice(2);
         var newArr1 = arr1.slice(1,2);
@@ -36,6 +43,15 @@
         console.log('拼接的字符串为：', string);
         var string2 = array1.join('-');
         console.log('拼接的字符串2为：', string2);
+
+        // 反转数组
+        array1.reverse();
+        console.log(array1);
+        
+        for (let value in array1) {
+            console.log(value);
+        }
+
     </script>
 </body>
 </html>
