--- a/array的相关操作.html
+++ b/array的相关操作.html
@@ -52,6 +52,10 @@
             console.log(value);
         }
 
+        for (let value of array1) {
+            console.log(value);
+        }
+
     </script>
 </body>
 </html>
