--- a/array的相关操作.html
+++ b/array的相关操作.html
@@ -48,13 +48,16 @@
         array1.reverse();
         console.log(array1);
         
+        // for in 和 for of 的区别
         for (let value in array1) {
             console.log(value);
         }
 
-        for (let value of array1) {
+        for (var value of array1) {
             console.log(value);
         }
+        console.log("aaaaaaa" + value);
+
 
     </script>
 </body>
