--- a/array的相关操作.html
+++ b/array的相关操作.html
@@ -48,15 +48,17 @@
         array1.reverse();
         console.log(array1);
         
-        // for in 和 for of 的区别
+        // for in 和 for of 的区别 for in 的
         for (let value in array1) {
             console.log(value);
         }
 
-        for (var value of array1) {
+        for (let value of array1) {
             console.log(value);
         }
         console.log("aaaaaaa" + value);
+
+
 
 
     </script>
