--- a/Object 创建对象练习.html
+++ b/Object 创建对象练习.html
@@ -2,7 +2,7 @@
  * @Description: 对象：有属性和方法，特指的某个事物 一组无序属性的集合
  * @Author: your name
  * @Date: 2019-11-09 11:41:54
- * @LastEditTime: 2019-11-09 17:57:04
+ * @LastEditTime: 2019-11-09 20:41:00
  * @LastEditors: Please set LastEditors
  -->
 <!DOCTYPE html>
@@ -58,6 +58,9 @@
                 console.log("key值是：" + json[key]);        
             }
         }
+
+        // 内置对象 MDN 在线帮助文档
+        // Math
 
     </script>
 </body>
