--- a/Object 创建对象练习.html
+++ b/Object 创建对象练习.html
@@ -2,7 +2,7 @@
  * @Description: 对象：有属性和方法，特指的某个事物 一组无序属性的集合
  * @Author: your name
  * @Date: 2019-11-09 11:41:54
- * @LastEditTime: 2019-11-09 20:41:00
+ * @LastEditTime: 2019-11-10 22:55:51
  * @LastEditors: Please set LastEditors
  -->
 <!DOCTYPE html>
@@ -60,7 +60,14 @@
         }
 
         // 内置对象 MDN 在线帮助文档
-        // Math
+        // Math 是对象 具有数学方法和函数的属性和方法
+
+        Math.PI // 绝对值
+        Math.E // 常数的底
+        Math.abs  // 绝对值
+        Math.ceil // 向上取整
+
+        
 
     </script>
 </body>
