--- a/js/DOM操作.html
+++ b/js/DOM操作.html
@@ -20,7 +20,10 @@
             alert("代码分离");
         }
 
+        // 根据id获取文档的属性值
         var separation = document.getElementById("separation");
+        
+        // 给属性值配置点击事件
         separation.onclick = clickDepart;
     </script>
 </body>
