--- a/js/DOM操作.html
+++ b/js/DOM操作.html
@@ -12,12 +12,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        input {
+            display: inline-block;
+            padding: 0 30px;
+        }
+    </style>
 </head>
 <body>
     <input type="button" value="显示效果" id="btn">
     <input type="button" value="分离HTML和JS" id="separation">
     <input type="button" value="点我" id="p-click">
     <p id="p1">这是一个p</p>
+    <br>
+    <br>
+    <br>
+    <input type="button" value="点我">
+    <input type="button" value="点我">
+    <input type="button" value="点我">
+    <input type="button" value="点我">
+    <input type="button" value="点我">
+    <input type="button" value="点我">
+    <input type="button" value="点我">
+    <br />
+    <br />
+    <br />
+    <input type="button" value="点我有惊喜" id="inbtn">
+    <select name="" id="ss">
+        <option value="1" id="op1">土豆丝</option>
+        <option value="2" id="op2">白菜</option>
+        <option value="3" id="op3">西红柿</option>
+        <option value="4" id="op4">黄瓜</option>
+        <option value="5" id="op5">香蕉</option>
+    </select>
+ 
+
+    <script src="common.js"></script>
     <script>
         // DOM: Document Object Model 文档对象模型 --- 操作页面的元素
         document.getElementById("btn").onclick = function() {
@@ -42,6 +72,27 @@
         // 凡是所有成对的标签，中间的文本内容都可以用 innerText 来处理
 
         // document.getElementsByTagName("") 这个方法里面存的是标签名，是一个伪数组
+
+        function selectedBtn(sender) {
+            
+        }
+
+        var inputs = document.getElementsByTagName("input");
+        for (let index = 0; index < inputs.length; index++) {
+            const element = inputs[index];
+            element.onclick = function() {
+                for (let i = 0; i < inputs.length; i++) {
+                    const ele = inputs[i];
+                    ele.value = "点我";
+                }
+                this.value = "被点了";
+            }
+        }
+
+        my$("inbtn").onclick = function () {
+            my$("op4").selected = true;
+        };
+
     </script>
 </body>
 </html>
