--- a/js/function相关操作.html
+++ b/js/function相关操作.html
@@ -2,8 +2,10 @@
  * @Description: In User Settings Edit
  * @Author: your name
  * @Date: 2019-11-11 21:17:17
- * @LastEditTime: 2019-11-11 21:17:17
- * @LastEditors: your name
+ * @LastEditTime: 2019-11-18 23:18:24
+ * @LastEditors: Please set LastEditors
+ * 如果是循环的方式添加事件，使用命名函数
+ * 如果不是循环的方式添加事件，使用匿名函数
  -->
 <!DOCTYPE html>
 <html lang="en">
