--- a/array的相关操作.html
+++ b/array的相关操作.html
@@ -131,12 +131,14 @@
         var result = true && flag;
         console.log(result);
         
-        // 最后一个放到第一个
+        // 取出最后一个放到第一个
         var arr3 = [10, 20, 30, 40, 50];
         arr3.unshift(arr3.pop());
         console.log(arr3);
         arr3.unshift(arr3.pop());
         console.log(arr3);
+
+        
     </script>
 </body>
 
